publish: fix random layout issues
generated from commit b8a352c2b607fdeab77a868036cb5b6249b1555f

--- a/tour.css
+++ b/tour.css
@@ -297,3 +297,9 @@ tr.introjs-showElement > th {
     transition: initial;
     -webkit-transition: initial;
 }
+
+.utility-wrap .introjs-fixParent.toolbar,
+.utility-wrap .introjs-fixParent.toolbar-container {
+    /* HACK */
+    position: relative !important;
+}
